fix mbl nav bar opacity, alignment

--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@
 8) Going Mobile
 **/
 
+
 /*** Fonts ***/
 
 @font-face {
@@ -700,17 +701,18 @@ h6{
 
 
 .site-title {
-    display: inline-block;
-    position: relative;
-    top: 3px;
-    margin: 0 auto;
-    margin-left: 12px;
-	color: #38354F;
+  display: inline-block;
+  position: relative;
+  top: 3px;
+  margin: 0 auto;
+  margin-left: 7px;
+	color: #2A273E;
+	opacity: 0.6; 
 	font-family: 'Avenir-Book';
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 1;
-    text-transform: uppercase;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1;
+  text-transform: uppercase;
 }
 
 .post-meta-title{margin: .6em auto;}
